--- a/Classwork/Servers/Tomcat v10.0 Server at localhost-config/catalina.properties
+++ b/Classwork/Servers/Tomcat v10.0 Server at localhost-config/catalina.properties
@@ -108,26 +108,22 @@ shared.loader=
 tomcat.util.scan.StandardJarScanFilter.jarsToSkip=\
 annotations-api.jar,\
 ant-junit*.jar,\
-ant-launcher*.jar,\
-ant*.jar,\
+ant-launcher.jar,\
+ant.jar,\
 asm-*.jar,\
 aspectj*.jar,\
-bcel*.jar,\
-biz.aQute.bnd*.jar,\
 bootstrap.jar,\
 catalina-ant.jar,\
 catalina-ha.jar,\
-catalina-jmx-remote.jar,\
+catalina-ssi.jar,\
 catalina-storeconfig.jar,\
 catalina-tribes.jar,\
-catalina-ws.jar,\
 catalina.jar,\
 cglib-*.jar,\
 cobertura-*.jar,\
 commons-beanutils*.jar,\
 commons-codec*.jar,\
 commons-collections*.jar,\
-commons-compress*.jar,\
 commons-daemon.jar,\
 commons-dbcp*.jar,\
 commons-digester*.jar,\
@@ -150,6 +146,7 @@ hamcrest-*.jar,\
 hibernate*.jar,\
 httpclient*.jar,\
 icu4j-*.jar,\
+jakartaee-migration-*.jar,\
 jasper-el.jar,\
 jasper.jar,\
 jaspic-api.jar,\
@@ -169,8 +166,6 @@ log4j*.jar,\
 mail*.jar,\
 objenesis-*.jar,\
 oraclepki.jar,\
-org.hamcrest.core_*.jar,\
-org.junit_*.jar,\
 oro-*.jar,\
 servlet-api-*.jar,\
 servlet-api.jar,\
@@ -189,7 +184,6 @@ tomcat-util-scan.jar,\
 tomcat-util.jar,\
 tomcat-websocket.jar,\
 tools.jar,\
-unboundid-ldapsdk-*.jar,\
 websocket-api.jar,\
 wsdl4j*.jar,\
 xercesImpl.jar,\
@@ -205,7 +199,7 @@ xom-*.jar
 # scan types by configuring a JarScanner with a nested JarScanFilter.
 tomcat.util.scan.StandardJarScanFilter.jarsToScan=\
 log4j-taglib*.jar,\
-log4j-web*.jar,\
+log4j-jakarta-web*.jar,\
 log4javascript*.jar,\
 slf4j-taglib*.jar
 
@@ -214,14 +208,3 @@ tomcat.util.buf.StringCache.byte.enabled=true
 #tomcat.util.buf.StringCache.char.enabled=true
 #tomcat.util.buf.StringCache.trainThreshold=500000
 #tomcat.util.buf.StringCache.cacheSize=5000
-
-# This system property is deprecated. Use the relaxedPathChars relaxedQueryChars
-# attributes of the Connector instead. These attributes permit a wider range of
-# characters to be configured as valid.
-# Allow for changes to HTTP request validation
-# WARNING: Using this option may expose the server to CVE-2016-6816
-#tomcat.util.http.parser.HttpParser.requestTargetAllow=|
-
-# Disable use of some privilege blocks Tomcat doesn't need since calls to the
-# code in question are always already inside a privilege block
-org.apache.el.GET_CLASSLOADER_USE_PRIVILEGED=false
